--- a/index.html
+++ b/index.html
@@ -4798,20 +4798,20 @@
       "brand": "Heavy Hitters",
       "revenue": 343893.18,
       "units": 7133,
-      "avg_unit_cost": null,
-      "ppi_index": null,
+      "avg_unit_cost": 27.84075471698113,
+      "ppi_index": 0.5870114870199156,
       "sell_through_pct": 0.9027190953809606,
-      "bei": null,
+      "bei": 1.537821857565002,
       "revenue_share": 0.050655319312307066
     },
     {
       "brand": "Find.",
       "revenue": 245761.88,
       "units": 2020,
-      "avg_unit_cost": null,
-      "ppi_index": null,
+      "avg_unit_cost": 65.08782258064515,
+      "ppi_index": 1.3723514289879817,
       "sell_through_pct": 0.8325547483415425,
-      "bei": null,
+      "bei": 0.6066629368801667,
       "revenue_share": 0.0362006205130119
     },
     {
@@ -5548,10 +5548,10 @@
       "brand": "&Shine",
       "revenue": 2165.99,
       "units": 55,
-      "avg_unit_cost": null,
-      "ppi_index": null,
+      "avg_unit_cost": 23.43416666666667,
+      "ppi_index": 0.49410029152989005,
       "sell_through_pct": 0.6875,
-      "bei": null,
+      "bei": 1.391417920178277,
       "revenue_share": 0.00031904940678749135
     },
     {
