--- a/index.html
+++ b/index.html
@@ -5455,7 +5455,7 @@
       "revenue_share": 0.0008712386891454931
     },
     {
-      "brand": "Heavy Hiters",
+      "brand": "Heavy Hitters",
       "revenue": 5350.48,
       "units": 109,
       "avg_unit_cost": 25.25229357798165,
